--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,11 @@ ml_grid/tests/unit_test_synthetic_old.ipynb
 
 ml_grid/tests/unit_test_synthetic-ac.ipynb
 
+knn time series time warp classifier-Multivariate-grid-dev-38-2.5.ipynb
 
+grid_score_reader_ML_TS_Grid_V_1.5.ipynb
+
+ml_grid_ts_env
 
 ml_grid_env
 # PyInstaller
