--- a/requirements_ts.txt
+++ b/requirements_ts.txt
@@ -1,5 +1,5 @@
-tensorflow==2.12.1
-keras==2.12.0
+tensorflow
+keras
 keras-self-attention==0.51.0
 absl-py==1.4.0
 adagio==0.2.4
@@ -160,4 +160,3 @@ pure-eval==0.2.2
 pyarrow==11
 aeon[dl]
 tsfresh
-
