--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+aeon==0.8.0
 asttokens==2.4.1
 astunparse==1.6.3
 attrs==23.2.0
@@ -8,11 +9,13 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+Deprecated==1.2.14
 exceptiongroup==1.2.0
 executing==2.0.1
 filelock==3.13.4
@@ -22,9 +25,9 @@ fonttools==4.51.0
 fsspec==2024.3.1
 future==1.0.0
 fuzzysearch==0.7.3
-gast==0.5.4
+gast==0.4.0
 google-auth==2.29.0
-google-auth-oauthlib==1.2.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 graphviz==0.20.3
 grpcio==1.62.1
@@ -43,9 +46,10 @@ joblib==1.4.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.10
-keras==3.2.1
+keras==2.10.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
+keras-self-attention==0.51.0
 kiwisolver==1.4.5
 libclang==18.1.1
 lightgbm==4.3.0
@@ -72,20 +76,17 @@ nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==8.9.2.26
 nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 opt-einsum==3.3.0
 optree==0.11.0
 packaging==24.0
-pandas==2.2.2
+pandas==2.0.3
 parso==0.8.4
 patsy==0.5.6
 pexpect==4.9.0
@@ -93,7 +94,7 @@ pickleshare==0.7.5
 pillow==10.3.0
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
-protobuf==4.25.3
+protobuf==3.19.6
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -105,6 +106,7 @@ Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.2
 requests==2.31.0
@@ -114,7 +116,7 @@ rich-click==1.7.4
 rsa==4.9
 scikeras==0.12.0
 scikit-learn==1.4.2
-scipy==1.13.0
+scipy==1.12.0
 seaborn==0.13.2
 shap==0.45.0
 simbsig==0.1.2
@@ -124,21 +126,21 @@ stack-data==0.6.3
 statsmodels==0.14.1
 sympy==1.12
 tabulate==0.9.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.16.1
-tensorflow-addons==0.23.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.36.0
+tensorflow==2.10.1
+tensorflow-addons==0.22.0
+tensorflow-estimator==2.10.0
+tensorflow-intel==2.16.1
+tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.4.0
-torch==1.13.1
+torch==2.2.2
 torchvision==0.17.2
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
-triton==2.2.0
 typeguard==2.13.3
 typing_extensions==4.11.0
 tzdata==2024.1
@@ -146,7 +148,6 @@ urllib3==2.2.1
 wcwidth==0.2.13
 Werkzeug==3.0.2
 widgetsnbextension==4.0.10
+win32-setctime==1.1.0
 wrapt==1.16.0
 xgboost==2.0.3
-aeon
-aeon[dl]
