--- a/requirements.txt
+++ b/requirements.txt
@@ -361,7 +361,7 @@ nvidia-cusparse-cu12==12.5.4.2
     # via
     #   -r requirements.in
     #   nvidia-cusolver-cu12
-nvidia-nccl-cu12==2.23.4
+nvidia-nccl-cu12==2.23.4; sys_platform == "linux"
     # via xgboost
 nvidia-nvjitlink-cu12==12.6.77
     # via
@@ -622,13 +622,16 @@ tensorboard-plugin-wit==1.8.1
     # via -r requirements.in
 tensorflow==2.17.0
     # via -r requirements.in
-tensorflow-addons==0.23.0
+tensorflow-addons==0.23.0; sys_platform == "linux"
+tensorflow-addons==0.21.0; sys_platform == "win32"
     # via -r requirements.in
 tensorflow-estimator==2.15.0
     # via -r requirements.in
-tensorflow-intel==0.0.1
+tensorflow-intel==0.0.1; sys_platform == "linux"
+tensorflow-intel; sys_platform == "win32"
     # via -r requirements.in
-tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-io-gcs-filesystem==0.37.1; sys_platform == "linux"
+tensorflow-io-gcs-filesystem==0.31.0; sys_platform == "win32"
     # via
     #   -r requirements.in
     #   tensorflow
