--- a/requirements.txt
+++ b/requirements.txt
@@ -735,6 +735,9 @@ zipp==3.20.2
 # setuptools
 pytest
 nbmake
+nbconvert
+nbformat
 
 upsetplot==0.9.0
     # manually added for results processing
+
