--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,24 @@
-# Byte-compiled / optimized / DLL files
+# Python
+## ----------------------------------------------------------------
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
+*.egg-info/
+.installed.cfg
+*.egg
 *.so
-notebooks/unit_test_synthetic_DEV.ipynb
-<<<<<<< HEAD
-*ml_grid_env/
-*HFE_ML_experiments/
-<<<<<<< HEAD
+*.py,cover
 
-ml_grid/tests/unit_test_synthetic_DEV.ipynb
-
-
-=======
+# Virtual Environments
+## ----------------------------------------------------------------
+ml_grid_env/
 ml_grid_ts_env/
->>>>>>> 7baaad22686630846a684ba42207489372d08357
-=======
->>>>>>> 68b72edb1ca57c5b15fc038fd0f5b650fd782b00
-# Distribution / packaging
-.Python
+.venv/
+venv/
 env/
+
+# Build and Distribution
+## ----------------------------------------------------------------
 build/
-develop-eggs/
 dist/
 downloads/
 eggs/
@@ -34,162 +29,80 @@ parts/
 sdist/
 var/
 wheels/
-<<<<<<< HEAD
-=======
 pip-wheel-metadata/
-share/python-wheels
->>>>>>> 68b72edb1ca57c5b15fc038fd0f5b650fd782b00
-*.egg-info/
-.installed.cfg
-*.egg
-/notebooks/catboost_info/
-\notebooks\catboost_info\
-ml_grid/tests/unit_test_synthetic_DEV.ipynb
-notebooks/catboost_info/*
-<<<<<<< HEAD
-# pyenv
-.python-version
+share/python-wheels/
+develop-eggs/
+.Python
+target/
 
-# Unit test / coverage reports
-.coverage
-.tox
+# PyInstaller
+## ----------------------------------------------------------------
+*.manifest
+*.spec
 
-# IDE
+# Sphinx Documentation
+## ----------------------------------------------------------------
+docs/build/
+docs/source/autoapi/
+doc/_build/
+
+# Jupyter Notebook
+## ----------------------------------------------------------------
+.ipynb_checkpoints
+
+# IDE and Editor Files
+## ----------------------------------------------------------------
 .idea/
 .vscode/
-*.sublime-workspace
 *.sublime-project
+*.sublime-workspace
 
-# Environment
-*.env
-
-# Compiled source
+# Compiled files
+## ----------------------------------------------------------------
 *.com
 *.class
 *.dll
 *.exe
 *.o
-*.so
 
-logs
-# Logs and databases
+# Logs and Databases
+## ----------------------------------------------------------------
+logs/
 *.log
 *.sql
 *.sqlite
 *.sqlite3
 *.db
-
-# Miscellaneous
-*.bak
-*.swp
-.DS_Store
-=======
-.ml_grid_env/*
-ml_grid_env/*
-*ml_grid_env
-ml_grid_env/
-unit_test_synthetic DEV.ipynb
-HFE_ML_experiments/
-
-ml_grid\tests\unit_test_synthetic DEV.ipynb
-
-ml_grid/tests/unit_test_synthetic DEV.ipynb
-
-ml_grid/tests/unit_test_synthetic_old.ipynb
-
-ml_grid/tests/unit_test_synthetic-ac.ipynb
-
-tests/knn time series time warp classifier-Multivariate-grid-dev-38-2.5.ipynb
-
-grid_score_reader_ML_TS_Grid_V_1.5.ipynb
-
-ml_grid/tests/unit_test_synthetic_time_series_DEV.ipynb
-
-knn time series time warp classifier-Multivariate-grid-dev-38-2.5.ipynb
-
-ml_grid_ts_env
-catboost_info
-notebooks/catboost_info/*
-installation_log.txt
-*catboost_info
-ml_grid_env
-# PyInstaller
-# Usually these files are written by a python script from a template
-# before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+installation_log.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
+# Testing and Coverage
+## ----------------------------------------------------------------
 .coverage
 .coverage.*
 .cache
+.tox/
+.nox/
+htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
 
-t1.ipynb
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# Poetry
-# poetry.lock
-
-# Pylons
-.cache/
-
-# Salt build
-# docs build
-doc/_build/
-
-# Folders
-.idea/
-.vscode/
->>>>>>> 68b72edb1ca57c5b15fc038fd0f5b650fd782b00
-packages.txt
+# Project-specific outputs
+## ----------------------------------------------------------------
+HFE_ML_experiments/
+catboost_info/
+notebooks/catboost_info/
 notebooks/best_models_summary.csv
+
+# Miscellaneous
+## ----------------------------------------------------------------
+*.bak
+*.swp
+.DS_Store
+.python-version
+packages.txt
+*.env
