--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -37,6 +37,11 @@ jobs:
           sudo apt-get install -y tzdata
           sudo dpkg-reconfigure -f noninteractive tzdata
 
+      - name: Install libgomp1 for LightGBM
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgomp1
+          
       - name: Install Python 3.10, Git, and set CA environment
         run: |
           sudo apt-get update
