--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -6,6 +6,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
+      # Conditionally set thread limits only for Gitea runners to prevent resource exhaustion.
+      # These are set to '1' if on Gitea, otherwise they are empty and have no effect.
+      OMP_NUM_THREADS: ${{ env.GITEA_ACTIONS == 'true' && '1' || '' }}
+      MKL_NUM_THREADS: ${{ env.GITEA_ACTIONS == 'true' && '1' || '' }}
+      OPENBLAS_NUM_THREADS: ${{ env.GITEA_ACTIONS == 'true' && '1' || '' }}
+      VECLIB_MAXIMUM_THREADS: ${{ env.GITEA_ACTIONS == 'true' && '1' || '' }}
+      NUMEXPR_NUM_THREADS: ${{ env.GITEA_ACTIONS == 'true' && '1' || '' }}
       DEBIAN_FRONTEND: noninteractive
 
     steps:
@@ -82,16 +89,6 @@ jobs:
           source "$VENV_PATH/bin/activate"
           which python
           python --version
-
-      - name: Set resource limits for Gitea runner
-        if: env.GITEA_ACTIONS == 'true'
-        run: |
-          echo "Setting thread limits for Gitea environment."
-          echo "OMP_NUM_THREADS=1" >> $GITHUB_ENV
-          echo "MKL_NUM_THREADS=1" >> $GITHUB_ENV
-          echo "OPENBLAS_NUM_THREADS=1" >> $GITHUB_ENV
-          echo "VECLIB_MAXIMUM_THREADS=1" >> $GITHUB_ENV
-          echo "NUMEXPR_NUM_THREADS=1" >> $GITHUB_ENV
 
       - name: Run tests
         run: |
