--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,8 +20,13 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  # This job handles the entire build and deploy process for GitHub Pages
+  build-and-deploy-github:
+    if: env.GITHUB_ACTIONS == 'true'
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,42 +44,34 @@ jobs:
         run: sphinx-build -b html docs/source docs/build
 
       - name: Upload artifact for GitHub Pages
-        if: env.GITHUB_ACTIONS == 'true'
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./docs/build
 
-      - name: Upload artifact for Gitea
-        if: env.GITEA_ACTIONS == 'true'
-        uses: actions/upload-artifact@v2
-        with:
-          name: gitea-docs
-          path: ./docs/build
-
-  deploy:
-    needs: build
-    # This job only runs on GitHub Actions
-    if: env.GITHUB_ACTIONS == 'true'
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
-  deploy-gitea:
-    needs: build
+  # This job handles the entire build and deploy process for Gitea
+  build-and-deploy-gitea:
     # This job only runs on Gitea Actions
     if: env.GITEA_ACTIONS == 'true'
     runs-on: ubuntu-latest
     steps:
-      - name: Download documentation artifact
-        uses: actions/download-artifact@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          name: gitea-docs
-          path: ./docs/build
+          python-version: '3.10'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: pip install -e .[docs]
+
+      - name: Build documentation
+        run: sphinx-build -b html docs/source docs/build
 
       - name: Deploy to Gitea docs location
         run: |
