--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -52,6 +52,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgomp1
           
+      - name: Install Java for H2O
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y default-jre
+          
       - name: Install Python 3.10, Git, and set CA environment
         run: |
           sudo apt-get update
