--- a/config_single_run.yml
+++ b/config_single_run.yml
@@ -45,6 +45,7 @@ models:
   H2O_XGBoost_class: true
   H2O_StackedEnsemble_class: false
   H2O_GAM_class: true
+  knn__gpu_wrapper_class: false
 
 # This section defines a single set of parameters for a standalone run.
 run_params:
