--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ classifiers = [
 # Core runtime dependencies for the project
 dependencies = [
     # Core data and ML libraries
-    "pandas==2.0.3",
-    "polars==1.9.0",
+    "pandas", #==2.0.3
+    "polars", #==1.9.0
     "numpy==1.26.4",
     "scikit-learn==1.5.2",
     "imbalanced-learn==0.12.4",
@@ -63,6 +63,10 @@ dependencies = [
     "pyarrow==18.1.0",
     "pyyaml==6.0.2",
     "lxml==5.3.0",
+
+    # Dev
+    "black",
+    "ruff"
 ]
 
 [project.urls]
@@ -84,6 +88,10 @@ ts = [
     "prophet==1.1.3",
     "pmdarima==2.0.3",
     "gluonts==0.13.2",
+]
+docs = [
+    "sphinx",
+    "sphinx-rtd-theme", 
 ]
 
 # Add this section to fix the package discovery error
