--- a/config_hyperopt.yml
+++ b/config_hyperopt.yml
@@ -10,6 +10,7 @@ global_params:
   # Number of iterations for RandomizedSearchCV and BayesSearchCV
   n_iter: 2
   max_param_space_iter_value : 10
+  sub_sample_param_space_pct: 0.05
   force_second_cv: false # If True, forces a second cross-validation run even if cached results are available. Defaults to False.
   model_eval_time_limit: 3600
 
