feat(ci): Enhance workflow stability and dependency management
This commit introduces several improvements to the CI/CD pipelines and dependency installation process to enhance stability and resolve compatibility issues.

Key changes include:

Dependency Fixes:

Pins setuptools<70.0.0 in pyproject.toml and relevant scripts to fix a pkg_resources import error with hyperopt in Python 3.12.
Updates installation scripts to ensure setuptools and wheel are consistently upgraded with pip.
CI Workflow Improvements:

The notebook-test.yml workflow is updated to correctly install pip for Python 3.12 and explicitly install the required setuptools version before running tests.
Both docs.yml and notebook-test.yml now consistently use a CPU-only version of PyTorch to ensure consistency and save resources.
H2O Stability:

The H2OBaseClassifier is made more robust with dynamic memory allocation for the H2O cluster based on available system memory.
Adds error handling to automatically restart the H2O cluster if it fails during data frame creation due to memory issues.
Project Files:

Adds a LICENSE file (MIT).
Updates the README.md.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -65,7 +65,10 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
-        run: pip install .[docs]
+        run: |
+          # Ensure setuptools and wheel are present before installing the project
+          pip install --upgrade pip setuptools wheel
+          pip install .[docs]
 
       - name: Verify PyTorch installation
         run: |
